<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="calc.example.android.gibillcalculator.home_calc">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- <ImageButton
             android:id="@+id/uberbutton"
             android:layout_width="fill_parent"

             android:layout_height="120sp"

             android:layout_marginBottom="@dimen/activity_vertical_margin"
             android:background="@drawable/uberad" />-->

        <TextView
            android:id="@+id/TextViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#360012ff"
            android:text="@string/instructions"
            android:textSize="10pt" />


        <EditText
            android:id="@+id/bah"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/q1"
            android:inputType="number"
            android:paddingTop="@dimen/activity_vertical_margin" />

        <TextView
            android:id="@+id/q0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/q0" />

        <Spinner
            android:id="@+id/q0Spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/years"
            android:prompt="@string/q0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/q2" />

        <Spinner
            android:id="@+id/spinnerCredits"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:entries="@array/numbcredlist"
            android:prompt="@string/numbcredprompt" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/percentprompt" />

        <Spinner
            android:id="@+id/spinnerPercent"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:entries="@array/percentprompt"
            android:prompt="@string/percentprompt" />
        <!-- ////////// For the loading spinner -->
        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <!--android:layout_centerHorizontal="true"-->
        <!-- //////////// For the loading spinner above -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/cl" />

        <Spinner
            android:id="@+id/Spinnercl"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:entries="@array/cl"
            android:prompt="@string/cl">

        </Spinner>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/weeks" />

        <Spinner
            android:id="@+id/weeksspinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:entries="@array/weeksspinner"
            android:prompt="@string/weeks">

        </Spinner>

        <Button
            android:id="@+id/calcButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:onClick="calc"
            android:text="@string/calculate" />

        <!--<TextView
            android:id="@+id/amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:gravity="center_horizontal"
            android:text="$0.00"
            android:textSize="50sp" />-->

    </LinearLayout>


</ScrollView>
